doc: update api doc
